Fix spacing in overlay and remove hard coded Animal Race

--- a/client/css/overlays/welcome.css
+++ b/client/css/overlays/welcome.css
@@ -42,7 +42,7 @@
   margin-bottom: 0;
 }
 #linkDetailsOverlay .welcomeInput {
-  margin: 40px 80px 0;
+  margin: 10px 80px 0;
 }
 #linkDetailsOverlay .welcomeInput span {
   display: inline-block;
